         especially on Android. Contributed by Nikhil Purushe.
       - Fixed conversion bug with asynchronous annotated interfaces
         when a Result parameter is declared. Reported by Bill Claypool.
       - Fixed conversion of request entities by ClientResource using response 
         variants. Reported by Arjohn Kampman.

- 2.0.10 (2011-10-05)
    - Bugs fixed
       - RDF/XML writing wasn't properly factoring statements from the same
         source reference.
       - SaxRepresentation wasn't writing the wrapped SAX sources. Added
         logic to write(XmlWriter) method. Reported by Raif S. Naffah.
       - Fixed potential NPE in Adapter#getLogger() method.
         Reported by Avi Flax.
       - Removed unused namespaces declaration in RDF/n3 and Turtle writers.
       - Removed extra empty line generated by XmlWriter at the top of docs.
       - Lowered level of log messages in the internal connector when a 
         connection is broken from warning to fine as it could be the result
         of a simple SHIFT+F5 browser reload.
       - Exceptions while writing RDF were not properly traced, leading to
         hard to debug issues.
       - Fixed the DIGEST authentication, when reusing a valid digest 
         ChallengeResponse for a distinct resource. Reported by Steve Ferris.
       - Fixed FreeMarker optional OSGi dependency on Servlet.
         Reported by Warren Janssens.
       - Fixed issue regarding the posting of Web forms to the GAE 
         platform (release 1.5.0 and higher) due to GAE misbehaviour 
         that consumes streams when receiving Web forms.
         Reported by Bjorn Roche.
       - Fixed parsing of form with empty parameters. Now their value is ""
         instead of null. Reported by Arjohn Kampman
    
    
    - 2.0.9 (2011-08-20)
    - Bugs fixed
       - Fixed severe log messages produced by the Component class due to 
         lack of child context usage.