@@ -13,6 +13,9 @@ Changes log
          when a Result parameter is declared. Reported by Bill Claypool.
        - Fixed conversion of request entities by ClientResource using response 
          variants. Reported by Arjohn Kampman.
+       - Fix the GWT edition, client requests using HTTP_BASIC authentication 
+         scheme did not generate Authorization header.
+         Reported by Koen Maes.
 
 - 2.0.10 (2011-10-05)
     - Bugs fixed
